--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -2,5 +2,11 @@
   "name": "@shared/web-components",
   "version": "1.0.0",
   "main": "src/index.ts",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^16.13.1"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.49"
+  }
 }
