feat: mail queue to new users

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,5 +1,15 @@
 NODE_ENV=development
 
-DATABASE_URL="postgresql://postgres:root@localhost:5432/dbname?schema=public"
+DATABASE_URL=postgresql://postgres:root@localhost:5432/dbname?schema=public
+
 APP_SECRET=92bcb4f4-5231-456c-80d0-1f574c0ae060
+
 MONGO_URL=mongodb://localhost:27017/dbname
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
