--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev -r tsconfig-paths/register --T --respawn --clear --ignore-watch node_modules --no-notify src/server.ts",
+    "dev": "npm-run-all -p dev:*",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --T --respawn --clear --ignore-watch node_modules --no-notify src/server.ts",
+    "dev:queue": "ts-node-dev -r tsconfig-paths/register --T --respawn --clear --ignore-watch node_modules --no-notify src/queue.ts",
     "test": "jest",
     "prisma": "prisma",
     "prisma:generate": "prisma generate",
@@ -17,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.6.2",
+    "bull": "^3.18.0",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
@@ -27,6 +30,7 @@
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "oracledb": "^5.0.0",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
@@ -36,12 +40,15 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@prisma/cli": "^2.6.2",
+    "@types/bull": "^3.14.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
+    "@types/nodemailer": "^6.4.0",
+    "npm-run-all": "^4.1.5",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   }
