--- a/packages/server/prisma/.env.example
+++ b/packages/server/prisma/.env.example
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:root@localhost:5432/dbname?schema=public"
+DATABASE_URL=postgresql://postgres:root@192.168.1.2:5432/multicast?schema=public
