--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "generate-password": "^1.5.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "lodash": "^4.17.20",
@@ -44,10 +45,12 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^8.3.0",
     "npm-run-all": "^4.1.5",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
