--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,9 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
     "generate-password": "^1.5.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "lodash": "^4.17.20",
@@ -33,6 +35,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "oracledb": "^5.0.0",
+    "puppeteer": "^5.3.0",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
@@ -44,12 +47,14 @@
     "@types/bull": "^3.14.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/express-handlebars": "^3.1.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
+    "@types/puppeteer": "^3.0.2",
     "@types/uuid": "^8.3.0",
     "npm-run-all": "^4.1.5",
     "ts-node-dev": "^1.0.0-pre.62",
