--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "extenso": "^2.0.1",
     "generate-password": "^1.5.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
