--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -57,6 +57,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/puppeteer": "^3.0.2",
     "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.7",
     "npm-run-all": "^4.1.5",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
