--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@shared/web-components",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "index.ts",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.13.1"
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
+    "react": "^16.13.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.49"
+    "@types/react": "^16.9.49",
+    "@types/styled-components": "^5.1.3"
   }
 }
