--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -7,6 +7,7 @@
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "react": "^16.13.1",
+    "react-loading": "^2.0.3",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
