--- a/packages/shared/web-styles/package.json
+++ b/packages/shared/web-styles/package.json
@@ -8,6 +8,8 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-toastify": "^6.0.8",
     "styled-components": "^5.2.0"
   }
 }
