--- a/packages/clients/employee-situation/package.json
+++ b/packages/clients/employee-situation/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
+    "@types/oracledb": "^5.0.0",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
@@ -48,9 +49,14 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/oracledb": "^5.0.0",
+    "oracledb": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.0.8",
+    "remove": "^0.1.5",
     "styled-components": "^5.2.0"
   },
   "build": {
