--- a/packages/shared/window-manager/package.json
+++ b/packages/shared/window-manager/package.json
@@ -8,5 +8,8 @@
     "@types/electron": "^1.6.10",
     "electron": "^10.1.1",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "electron-is-dev": "^1.2.0"
   }
 }
