chore: change output folder of employee situation client

--- a/packages/clients/employee-situation/package.json
+++ b/packages/clients/employee-situation/package.json
@@ -65,7 +65,7 @@
     "productName": "Situação do Funcionário",
     "directories": {
       "buildResources": "build",
-      "output": "releases"
+      "output": "release"
     },
     "files": [
       "package.json",
