--- a/packages/shared/axios/package.json
+++ b/packages/shared/axios/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "react": "^16.13.1"
   },
   "devDependencies": {
+    "@types/react": "^16.9.49",
     "typescript": "^4.0.2"
   }
 }
