--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -7,11 +7,14 @@
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "react": "^16.13.1",
+    "react-icons": "^3.11.0",
+    "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.49",
+    "@types/react-input-mask": "^2.0.5",
     "@types/styled-components": "^5.1.3"
   }
 }
