--- a/packages/shared/web-pages/package.json
+++ b/packages/shared/web-pages/package.json
@@ -8,7 +8,11 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "electron": "^10.1.1",
+    "hookable-unform": "^1.0.19",
     "react": "^16.13.1",
-    "styled-components": "^5.2.0"
+    "react-toastify": "^6.0.8",
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
   }
 }
