--- a/packages/clients/accounts/package.json
+++ b/packages/clients/accounts/package.json
@@ -33,6 +33,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
     "babel-loader": "^8.1.0",
+    "babel-plugin-root-import": "^6.5.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
     "electron": "^10.1.1",
@@ -50,7 +51,9 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.0.8",
     "styled-components": "^5.2.0"
   },
   "build": {
