--- a/packages/clients/accounts/tsconfig.json
+++ b/packages/clients/accounts/tsconfig.json
@@ -15,5 +15,9 @@
     "outDir": "./dist",
     "strict": true ,
     "esModuleInterop": true,
+    "baseUrl": "src",
+    "paths": {
+      "~/*": ["*"]
+    }
   }
 }
