--- a/packages/clients/registration-information/package.json
+++ b/packages/clients/registration-information/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@clients/accompaniments",
-  "version": "1.0.0",
+  "name": "@clients/registration-information",
+  "version": "0.0.1",
   "private": true,
   "main": "./dist/main.js",
   "author": "Dantas Distribuidora <ti@dantasdistribuidora.com.br>",
-  "description": "Sistema de gerenciamento de ordens de compra",
+  "description": "Sistema de coleta de informações sobre a empresa",
   "license": "MIT",
   "scripts": {
     "dev": "npm-run-all -p dev:react electron:serve",
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
+    "@types/oracledb": "^5.0.0",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
@@ -48,17 +49,25 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/oracledb": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "hookable-unform": "^1.0.19",
+    "oracledb": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.0"
+    "react-toastify": "^6.0.8",
+    "remove": "^0.1.5",
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
   },
   "build": {
-    "appId": "br.com.dantasdistribuidora.accompaniments",
-    "productName": "FollowUP Compras",
+    "appId": "br.com.dantasdistribuidora.registration-information",
+    "productName": "Informações de Cadastro Externo",
     "directories": {
       "buildResources": "build",
-      "output": "packages"
+      "output": "release"
     },
     "files": [
       "package.json",
