--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -10,11 +10,13 @@
     "react-icons": "^3.11.0",
     "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
+    "react-select": "^3.1.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.49",
     "@types/react-input-mask": "^2.0.5",
+    "@types/react-select": "^3.0.20",
     "@types/styled-components": "^5.1.3"
   }
 }
