refact: remove next keyword from accompaniments client

--- a/packages/clients/accompaniments/package.json
+++ b/packages/clients/accompaniments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@clients/accompaniments-next",
+  "name": "@clients/accompaniments",
   "private": true,
   "description": "My application description",
   "version": "1.0.0",
