--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "@shared/web-styles": "*",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "react": "^16.13.1",
