--- a/packages/clients/accompaniments/package.json
+++ b/packages/clients/accompaniments/package.json
@@ -10,12 +10,19 @@
     "build": "nextron build"
   },
   "dependencies": {
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "electron-serve": "^1.0.0",
     "electron-store": "^6.0.0",
+    "hookable-unform": "^1.0.19",
     "immer": "^7.0.9",
     "next-compose-plugins": "^2.2.0",
     "next-transpile-modules": "^4.1.0",
+    "polished": "^3.6.7",
+    "react-icons": "^3.11.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.1",
+    "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
