--- a/packages/clients/accompaniments/package.json
+++ b/packages/clients/accompaniments/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "dot-object": "^2.1.4",
     "electron-serve": "^1.0.0",
     "electron-store": "^6.0.0",
     "hookable-unform": "^1.0.19",
@@ -22,6 +23,7 @@
     "react-icons": "^3.11.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.1",
+    "react-resizable": "^1.11.0",
     "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
@@ -35,6 +37,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-resizable": "^1.7.2",
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-saga": "^0.10.5",
