--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -7,10 +7,12 @@
     "@shared/web-styles": "*",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "polished": "^3.6.7",
     "react": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-select": "^3.1.0",
     "styled-components": "^5.2.0"
   },
