--- a/packages/clients/accompaniments/renderer/tsconfig.json
+++ b/packages/clients/accompaniments/renderer/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": "src",
+    "paths": {
+      "~/*": ["./*"]
+    }
   }
 }
