--- a/packages/clients/accompaniments/package.json
+++ b/packages/clients/accompaniments/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-labels": "^1.1.0",
     "dot-object": "^2.1.4",
     "electron-serve": "^1.0.0",
     "electron-store": "^6.0.0",
@@ -20,6 +22,7 @@
     "next-compose-plugins": "^2.2.0",
     "next-transpile-modules": "^4.1.0",
     "polished": "^3.6.7",
+    "react-chartjs-2": "^2.10.0",
     "react-icons": "^3.11.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.1",
