--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -7,6 +7,7 @@
     "@shared/web-styles": "*",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "lodash": "^4.17.20",
     "polished": "^3.6.7",
     "react": "^16.13.1",
     "react-icons": "^3.11.0",
