--- a/packages/clients/accompaniments/package.json
+++ b/packages/clients/accompaniments/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "axios": "^0.20.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-labels": "^1.1.0",
     "dot-object": "^2.1.4",
@@ -24,13 +25,16 @@
     "polished": "^3.6.7",
     "react-chartjs-2": "^2.10.0",
     "react-icons": "^3.11.0",
+    "react-input-mask": "^2.0.4",
+    "react-loading": "^2.0.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.1",
     "react-resizable": "^1.11.0",
     "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
