--- a/packages/clients/accompaniments/package.json
+++ b/packages/clients/accompaniments/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.20.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-labels": "^1.1.0",
+    "create-outlook-mail": "^1.0.1",
     "dot-object": "^2.1.4",
     "electron-serve": "^1.0.0",
     "electron-store": "^6.0.0",
@@ -27,6 +28,7 @@
     "react-icons": "^3.11.0",
     "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
+    "react-modal": "^3.11.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.1",
     "react-resizable": "^1.11.0",
@@ -43,6 +45,7 @@
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-modal": "^3.10.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-resizable": "^1.7.2",
     "@types/redux": "^3.6.0",
