--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -7,10 +7,11 @@
     "rootDir": "./src",
     "removeComments": true,
     "typeRoots": [
-      "./node_modules/@types",
-      "../../node_modules/@types",
-      "./src/@types"
+      "./node_modules/@types/**",
+      "../../node_modules/@types/**",
+      "./src/@types/**"
     ],
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "experimentalDecorators": true,
