--- a/packages/shared/web-components/package.json
+++ b/packages/shared/web-components/package.json
@@ -7,9 +7,11 @@
     "@shared/web-styles": "*",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "debounce-promise": "^3.1.2",
     "lodash": "^4.17.20",
     "polished": "^3.6.7",
     "react": "^16.13.1",
+    "react-dropzone": "^11.2.4",
     "react-icons": "^3.11.0",
     "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
@@ -18,6 +20,7 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@types/debounce-promise": "^3.1.3",
     "@types/react": "^16.9.49",
     "@types/react-input-mask": "^2.0.5",
     "@types/react-select": "^3.0.20",
