--- a/packages/backend/.babelrc
+++ b/packages/backend/.babelrc
@@ -1,20 +1,8 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-typescript"
-  ],
+  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
   "plugins": [
-    [
-      "babel-plugin-root-import",
-      {
-        "rootPathSuffix": "src"
-      }
-    ],
-    [
-      "@babel/plugin-transform-runtime",
-      {
-        "regenerator": true
-      }
-    ]
+    ["@babel/plugin-transform-typescript"],
+    ["babel-plugin-root-import", { "rootPathSuffix": "src" }],
+    ["@babel/plugin-transform-runtime", { "regenerator": true }]
   ]
 }
