--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env DEBUG=express:* ts-node-dev -r tsconfig-paths/register --files --respawn src/server.ts",
-    "build": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
+    "prebuild": "rimraf dist",
+    "build": "babel src --out-dir dist --extensions \".ts,.tsx\" --copy-files --source-maps inline",
     "start": "ts-node -r tsconfig-paths/register --files src/server.ts",
     "prisma": "prisma",
     "prisma:generate": "prisma generate",
@@ -44,6 +45,7 @@
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
     "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-typescript": "^7.12.13",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
     "@prisma/cli": "^2.14.0",
@@ -53,6 +55,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-root-import": "^6.6.0",
     "cross-env": "^7.0.2",
+    "rimraf": "^3.0.2",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.2"
