--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^5.2.0",
+    "extenso": "^2.0.1",
     "generate-password": "^1.5.1",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
@@ -35,6 +36,7 @@
     "mongoose": "^5.10.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.18",
     "pg": "^8.5.1",
     "puppeteer": "^5.5.0",
     "ts-node": "^9.1.1",
@@ -49,9 +51,20 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
     "@prisma/cli": "^2.14.0",
+    "@types/bull": "^3.15.0",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/express-handlebars": "^3.1.0",
     "@types/http-errors": "^1.8.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
+    "@types/mongoose": "^5.10.3",
+    "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
+    "@types/nodemailer": "^6.4.0",
+    "@types/puppeteer": "^5.4.3",
     "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.11",
     "babel-loader": "^8.2.2",
     "babel-plugin-root-import": "^6.6.0",
     "cross-env": "^7.0.2",
